cluster/agentic-poc/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner
  namespace: agentic-poc
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: agentic-poc-runner
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 8443
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: automation-orchestrator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: automation-orchestrator
              app.kubernetes.io/component: worker
      ports:
        - protocol: TCP
          port: 8443
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 5353
        - protocol: TCP
          port: 5353
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshell
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 10.10.10.101/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
      ports:
        - protocol: TCP
          port: 8443
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: agentic-poc
spec:
  egress:
    - type: Allow
      to:
        cidrSelector: 172.231.0.0/16
    - type: Allow
      to:
        cidrSelector: 10.232.0.0/14
    - type: Allow
      to:
        cidrSelector: 10.10.10.101/32
    - type: Allow
      to:
        cidrSelector: 10.10.10.10/32
    - type: Allow
      to:
        cidrSelector: 10.10.10.11/32
    - type: Allow
      to:
        cidrSelector: 10.10.10.12/32
    - type: Allow
      to:
        dnsName: github.com
    - type: Allow
      to:
        dnsName: objects.githubusercontent.com
    - type: Allow
      to:
        dnsName: release-assets.githubusercontent.com
    - type: Allow
      to:
        dnsName: registry.npmjs.org
    - type: Allow
      to:
        dnsName: registry.access.redhat.com
    - type: Allow
      to:
        dnsName: cdn01.quay.io
    - type: Allow
      to:
        dnsName: cdn-ubi.redhat.com
    - type: Allow
      to:
        dnsName: sso.apps.cluster-qb5wm.dyn.redhatworkshops.io
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
